--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Momentum</title>
   </head>
   <body>
-    <h2 id="clock">00:00:00</h2>
+    <header>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
+    </header>
 
-    <form class="hidden" id="login-form">
-      <input required type="text" placeholder="What is your name" />
-      <input type="submit" value="Log In" />
-    </form>
+    <section class="main">
+      <h2 id="clock">00:00:00</h2>
 
-    <h1 id="greeting" class="hidden"></h1>
+      <form class="hidden" id="login-form">
+        <input required type="text" placeholder="What is your name" />
+        <input type="submit" value="Log In" />
+      </form>
 
-    <form id="todo-form">
-      <input type="text" placeholder="Write a to-do" />
-    </form>
+      <h1 id="greeting" class="hidden"></h1>
 
-    <ul id="todo-list"></ul>
+      <form id="todo-form">
+        <input type="text" placeholder="할 일을 기록해보세요" />
+      </form>
 
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
+      <ul id="todo-list"></ul>
+    </section>
 
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
+    <section class="tail">
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+    </section>
 
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
